lesson4/css/medium.css
@media only screen and (min-width: 550px) {
    header, nav, main, footer {
        max-width: 960px;
      }

      #article {
          display: grid;
            grid-template-columns: 2fr 1fr;
            grid-template-rows: 3em 250px auto;
      }

      #article h3 {
          grid-column: 1/3;
          grid-row: 1/2;
      }

      #article p {
          grid-column: 1/;
          grid-row: 2/4;
      }

      #article img {
          grid-column: 2/3;
          grid-row: 2/3;
      }

      nav ul {
          padding: unset;
          display: flex;
          justify-content: space-around;
          flex-flow: row;
          text-align: left;
        }

        nav ul li a {
            font-size: 16px;
            padding: 4px;
            line-height: 2.5em;
        }

        .navigation li {
            display:flex
        }

    .navigation li:first-child {
        display: none;
    }

      #forecast-imgs {
        padding: unset;
        display: flex;
        justify-content: space-around;
        flex-flow: row;
        text-align: left;
      }

      footer img {
          max-width: 40%;
      }

      footer #contact {
          max-width: 50%;
      }

}

